# faceRec

./: .gitignore  CMakeLists.txt  README.md
control/: Buffer.h  CMakeLists.txt  MatToQImage.cpp  PersonRecognitionManager.cpp  PersonRecognitionManager.hpp  ProcessingThread.cpp  ProcessingThread.h  SharedImageBuffer.h  Structures.h
core/: CMakeLists.txt
core/algorithm/: CMakeLists.txt  facedetect.cpp  facedetect.hpp  fzhDefines.hpp
core/dataset/: CMakeLists.txt  person.cpp  person.hpp
frontend/: CMakeLists.txt  CameraConnectDialog.cpp  CameraConnectDialog.h  CameraView.cpp  CameraView.h  CameraView.ui  FrameLabel.h  ImageProcessingSettingsDialog.cpp  ImageProcessingSettingsDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
frontend/resources/: icon.qrc
